<resources>
    <string name="app_name">RPG-Battle</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="heroName">Hős neve</string>
    <string name="heroHp">Hős életereje</string>
    <string name="heroMana">Hős varázsereje</string>
    <string name="heroDmg">Hős fegyverének sebzése</string>
    <string name="heroDef">Hős védelmi képessége</string>
    <string name="currentHeroes">Jelenlegi hősök</string>
    <string name="noHeroesYet">Még nincs hős.</string>
    <string name="newHero">Új hős</string>
    <string name="intobattle">Harc</string>
    <string-array name="factions">
        <item>Alliance</item>
        <item>Horde</item>
    </string-array>
    <string-array name="noHeroesYet">
        <item>No</item>
        <item>Heroes</item>
        <item>Yet</item>
        <item>.</item>
        <item>No</item>
        <item>Heroes</item>
        <item>Yet</item>
        <item>.</item>
        <item>No</item>
        <item>Heroes</item>
        <item>Yet</item>
        <item>.</item>
        <item>No</item>
        <item>Heroes</item>
        <item>Yet</item>
        <item>.</item>
        <item>No</item>
        <item>Heroes</item>
        <item>Yet</item>
        <item>.</item>
        <item>No</item>
        <item>Heroes</item>
        <item>Yet</item>
        <item>.</item>
        <item>No</item>
        <item>Heroes</item>
        <item>Yet</item>
        <item>.</item>
        <item>No</item>
        <item>Heroes</item>
        <item>Yet</item>
        <item>.</item>
        <item>No</item>
        <item>Heroes</item>
        <item>Yet</item>
        <item>.</item>
        <item>No</item>
        <item>Heroes</item>
        <item>Yet</item>
        <item>.</item>
        <item>No</item>
        <item>Heroes</item>
        <item>Yet</item>
        <item>.</item>
        <item>No</item>
        <item>Heroes</item>
        <item>Yet</item>
        <item>.</item>
        <item>No</item>
        <item>Heroes</item>
        <item>Yet</item>
        <item>.</item>
        <item>No</item>
        <item>Heroes</item>
        <item>Yet</item>
        <item>.</item>
        <item>No</item>
        <item>Heroes</item>
        <item>Yet</item>
        <item>.</item>
        <item>No</item>
        <item>Heroes</item>
        <item>Yet</item>
        <item>.</item>
    </string-array>
    <string name="title_activity_choose_image">Kép kiválasztása</string>
</resources>
