<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewHero"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/background">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/hero_name"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:hint="@string/heroName"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/hero_hp"
        android:layout_below="@+id/hero_name"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/hero_name"
        android:hint="@string/heroHp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/hero_sp"
        android:hint="@string/heroMana"
        android:layout_below="@+id/hero_hp"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/hero_hp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/hero_weapondamage"
        android:hint="@string/heroDmg"
        android:layout_below="@+id/hero_sp"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/hero_sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/hero_defense"
        android:hint="@string/heroDef"
        android:layout_below="@+id/hero_weapondamage"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/hero_weapondamage" />

    <Spinner
        android:entries="@array/factions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/faction"
        android:layout_below="@+id/hero_defense"
        android:spinnerMode="dropdown"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <Spinner
        android:entries="@array/heroClass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/heroClass"
        android:spinnerMode="dropdown"
        android:layout_below="@+id/faction"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hős mentése"
        android:id="@+id/saveHero"
        android:onClick="save"
        android:layout_below="@+id/heroClass"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>