<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="@drawable/background">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/currentHeroes"
        android:id="@+id/textMainTitle"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newHero"
        android:id="@+id/btnNewHero"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:onClick="callNewHero" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listCurrentHeroes"
        android:layout_below="@+id/textMainTitle"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/btnNewHero" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intobattle"
        android:id="@+id/btnStartBattle"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info"
        android:id="@+id/btnInfo"
        android:layout_alignTop="@+id/btnStartBattle"
        android:layout_toStartOf="@+id/btnStartBattle"
        android:layout_toEndOf="@+id/btnNewHero"
        android:onClick="callInfos" />
</RelativeLayout>
